update TRM page

--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -49,6 +49,11 @@
                 allowautoplay allowtransparency allow="autoplay"></iframe>
             </div>
           </div>
+          <div class="video-bar small bar-004">
+            <p>TRM 004</p>
+            <p>THE CLOUD</p>
+            <p>JUNE 28, 2022</p>
+          </div>
         </div>
       </div>
       </div>
