--- a/steve-says/index.html
+++ b/steve-says/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Primary Meta Tags -->
-  <title>Information Arcade</title>
+  <title>Steve Says</title>
   <meta name="title" content="Information Arcade">
   <meta name="description"
     content="A collection of experiences, tools, and souvenirs from the Reality Recycling Center.">
