authors, styling tweaks

--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -45,7 +45,7 @@
         </h2>
       </div>
     </nav>
-    <section class="main-content">
+    <section class="main-content cracked-content">
       <div>
         <div class="img-container">
           <img src="" class="pics">
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="controls">
-        <button type="button" id="button">NEW IMAGE</button>
+        <button type="button" id="button">MORE WISDOM</button>
       </div>
     </section>
     <footer class="footer canvas">
