--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <p class="project-description">
             A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
           </p>
+          <p class="project-author">
+            By Scott Diekema
+          </p>
         </div>
       </div>
       <div class="project" id="cracked">
@@ -66,6 +69,9 @@
           </h3>
           <p class="project-description">
             A random image generator that really makes you wonder...
+          </p>
+          <p class="project-author">
+            By Scott Diekema
           </p>
         </div>
       </div>
@@ -78,6 +84,9 @@
           <p class=" project-description">
             A search engine that traces the history of technology from the new millenium to the present.
           </p>
+          <p class="project-author">
+            By Scott Diekema, George Chen, and Michel Lizardo
+          </p>
         </div>
       </div>
       <div class="project" id="trm">
@@ -88,6 +97,9 @@
           </h3>
           <p class="project-description">
             A meditation on the act of recording and its various techniques.
+          </p>
+          <p class="project-author">
+            Powered by the Reality Recycling Center
           </p>
         </div>
       </div>
