--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
           </p>
         </div>
       </div>
+      <div class="project" id="about">
+        <img class="project-icon" src="Images/question-mark.png" alt="">
+        <div class="project-text">
+          <h3 class="project-title">
+            <a href="/about/">About the Arcade</a>
+          </h3>
+          <p class="project-description">
+            Learn more about this project!
+          </p>
+        </div>
+      </div>
     </section>
     <footer class="footer">
       <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
