about folder lowercase

--- a/About/index.html
+++ b/About/index.html
@@ -8,7 +8,7 @@
 
   <!-- Primary Meta Tags -->
   <title>About the Arcade</title>
-  <meta name="title" content="Information Arcade">
+  <meta name="title" content="About the Arcade">
   <meta name="description"
     content="A collection of experiences, tools, and souvenirs from the Reality Recycling Center.">
 
