more about text

--- a/about/index.html
+++ b/about/index.html
@@ -49,6 +49,7 @@
     <section class="main-content about-content">
         <p>The Information Arcade is a collection of in-house projects, experiments, and souvenirs from the team at RRC. Some of these ideas are more developed than others, but all of them started with a concept that we had to test out in some capacity. We hope you enjoy!</p>
         <p>You can learn more about RRC and view our client work at <a href="https://www.recyclereality.net/">recyclereality.net</a>. We also elaborate on some of these Information Arcade projects at our blog, the <a href="https://blog.recyclereality.net/">Recycler’s Union</a>.</p>
+        <p>The name, "Information Arcade," is a tribute to the University of Iowa’s <a href="https://www.educause.edu/ir/library/text/CEM9438.txt">1992 initiative</a> to bring electronic resources into research, teaching, and independent learning.</p>
     </section>
     <footer class="footer">
       <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
