--- a/about/index.html
+++ b/about/index.html
@@ -47,8 +47,8 @@
       </div>
     </nav>
     <section class="main-content about-content">
-        <p>The Information Arcade is a collection of in-house projects, experiments, and souvenirs from the team at RRC. Some of these ideas are more developed than others, but each of them began with a concept that had to be tested. We hope you enjoy!</p>
-        <p>You can learn more about RRC and our work at <a href="https://www.recyclereality.net/">recyclereality.net</a>. The name "Information Arcade" is a tribute to the University of Iowa’s <a href="https://www.educause.edu/ir/library/text/CEM9438.txt">1992 initiative</a> to bring electronic resources into research, teaching, and independent learning.</p>
+        <p>The Information Arcade is a collection of in-house projects, experiments, and souvenirs from the team at RRC. Some ideas are more developed than others. We hope you enjoy!</p>
+        <p>You can learn more about RRC and our work at <a href="https://www.recyclereality.net/">recyclereality.net</a>. The name "Information Arcade" is a tribute to the University of Iowa Library's <a href="https://www.educause.edu/ir/library/text/CEM9438.txt">1992 initiative</a> to bring electronic resources into research, teaching, and independent learning.</p>
     </section>
     <footer class="footer">
       <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
