add snerg cloud

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         </h2>
       </div>
     </nav>
+
     <section class="main-content">
+
       <div class="project" id="steve">
         <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
@@ -61,6 +63,22 @@
           </p>
         </div>
       </div>
+
+      <div class="project" id="cloud">
+        <img class="project-icon" src="Images/cloud.png" alt="">
+        <div class="project-text">
+          <h3 class="project-title">
+            <a href="/cloud/">The Cloud</a>
+          </h3>
+          <p class="project-description">
+            An experimental, AI-rendered, WebGL cloud.
+          </p>
+          <p class="project-author">
+            By Sam Lowe, Scott Diekema, and Nicholas Byrne
+          </p>
+        </div>
+      </div>
+
       <div class="project" id="cracked">
         <img class="project-icon" src="Images/broken-phone.png" alt="">
         <div class="project-text">
@@ -75,6 +93,7 @@
           </p>
         </div>
       </div>
+
       <div class="project" id="backrub">
         <img class="project-icon" src="Images/hand.png" alt="">
         <div class="project-text">
@@ -89,6 +108,7 @@
           </p>
         </div>
       </div>
+
       <div class="project" id="trm">
         <img class="project-icon" src="Images/vhs.png" alt="">
         <div class="project-text">
@@ -103,6 +123,7 @@
           </p>
         </div>
       </div>
+
       <div class="project" id="about">
         <img class="project-icon" src="Images/question-mark.png" alt="">
         <div class="project-text">
@@ -114,6 +135,7 @@
           </p>
         </div>
       </div>
+
     </section>
     <footer class="footer">
       <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
