--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             An experimental, AI-rendered, WebGL cloud.
           </p>
           <p class="project-author">
-            By Sam Lowe, Scott Diekema, and Nicholas Byrne
+            By Sam Lowe, Nicholas Byrne, and Scott Diekema
           </p>
         </div>
       </div>
