rrc tv mvp done

--- a/tv/index.html
+++ b/tv/index.html
@@ -16,16 +16,14 @@
   <meta property="og:url" content="https://www.informationarcade.com/tv">
   <meta property="og:title" content="RRC TV">
   <meta property="og:description" content="A showcase of GLSL shaders.">
-  <meta property="og:image" content="../Images/trm_preview.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://www.informationarcade.com/tv">
-  <meta property="twitter:title" content="ShaderTV">
+  <meta property="twitter:title" content="RRC TV">
   <meta property="twitter:description" content="A showcase of GLSL shaders.">
-  <meta property="twitter:image" content="../Images/trm_preview.jpg">
 
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./tv.css">
   <link rel="stylesheet" href="https://use.typekit.net/dpv8whh.css">
@@ -34,7 +32,7 @@
 <body>
   <div class="tv-grain">
     <div class="tv-globe-container"><a href="https://www.informationarcade.com/"><img class="tv-globe" src="../Images/globe.png"></img></a></div>
-    <a href="">RRC</a>
+    <a href="https://www.recyclereality.net/"><img class="rrc-logo-chrome" src="./img/rrc_logo_chrome.png"></img></a>
     <div class="tv-prev-next-container">
       <button id="left" class="custom-btn btn-8">◀</button>
       <button id="right" class="custom-btn btn-8">▶</button>
