--- a/tv/index.html
+++ b/tv/index.html
@@ -34,8 +34,8 @@
     <div class="tv-globe-container"><a href="https://www.informationarcade.com/"><img class="tv-globe" src="../Images/globe.png"></img></a></div>
     <a href="https://www.recyclereality.net/"><img class="rrc-logo-chrome" src="./img/rrc_logo_chrome.png"></img></a>
     <div class="tv-prev-next-container">
-      <button id="left" class="custom-btn btn-8">◀</button>
-      <button id="right" class="custom-btn btn-8">▶</button>
+      <button id="left" class="custom-btn btn-8">⇦</button>
+      <button id="right" class="custom-btn btn-8">⇨</button>
     </div>
   </div>
   <div class="tv-controls">
