fix buttons and add channels to tv

--- a/tv/index.html
+++ b/tv/index.html
@@ -30,12 +30,13 @@
 </head>
 
 <body>
+  <div id="channel" class="channel-number">01</div>
   <div class="tv-grain">
     <div class="tv-globe-container"><a href="https://www.informationarcade.com/"><img class="tv-globe" src="../Images/globe.png"></img></a></div>
     <a href="https://www.recyclereality.net/"><img class="rrc-logo-chrome" src="./img/rrc_logo_chrome.png"></img></a>
     <div class="tv-prev-next-container">
-      <button id="left" class="custom-btn btn-8">⇦</button>
-      <button id="right" class="custom-btn btn-8">⇨</button>
+      <button id="left" class="custom-btn btn-8"><img src="./img/leftarrow.png"></img></button>
+      <button id="right" class="custom-btn btn-8"><img src="./img/rightarrow.png"></img></button>
     </div>
   </div>
   <div class="tv-controls">
