--- a/about/index.html
+++ b/about/index.html
@@ -47,12 +47,12 @@
       </div>
     </nav>
     <section class="main-content about-content">
-        <p>The Information Arcade is a collection of in-house projects, experiments, and souvenirs from the team at RRC. Some ideas are more developed than others. We hope you enjoy!</p>
-        <p>You can learn more about RRC and our work at <a href="https://www.recyclereality.net/">recyclereality.net</a>. The name "Information Arcade" is a tribute to the University of Iowa Library's <a href="https://www.educause.edu/ir/library/text/CEM9438.txt">1992 initiative</a> to bring electronic resources into research, teaching, and independent learning.</p>
+        <p>The Information Arcade is a collection of in-house projects, experiments, and souvenirs from the team at recycleReality. Some ideas are more developed than others. We hope you enjoy!</p>
+        <p>You can learn more about recycleReality and our work at <a href="https://www.recyclereality.net/">recyclereality.net</a>. The name "Information Arcade" is a tribute to the University of Iowa Library's <a href="https://www.educause.edu/ir/library/text/CEM9438.txt">1992 initiative</a> to bring electronic resources into research, teaching, and independent learning.</p>
     </section>
     <footer class="footer">
       <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
-        ♻ © <a href="https://www.recyclereality.net/">RRC</a> 2022</p>
+        ♻ © <a href="https://www.recyclereality.net/">RRC</a> 2023</p>
     </footer>
   </section>
 </body>
